--- a/Example/RMStyleManager/Main.storyboard
+++ b/Example/RMStyleManager/Main.storyboard
@@ -56,6 +56,12 @@
                                     <segue destination="QTD-Jk-sIf" kind="show" id="10A-0s-3Y8"/>
                                 </connections>
                             </button>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="At-icon.png" translatesAutoresizingMaskIntoConstraints="NO" id="jd9-2K-inm" customClass="RMStylishImageView">
+                                <rect key="frame" x="236" y="72" width="128" height="128"/>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="string" keyPath="style" value="imageViewStyle"/>
+                                </userDefinedRuntimeAttributes>
+                            </imageView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
@@ -66,7 +72,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1115" y="429"/>
+            <point key="canvasLocation" x="1079" y="318"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="htV-cE-uEZ">
@@ -108,4 +114,7 @@
             <point key="canvasLocation" x="303" y="429"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="At-icon.png" width="512" height="512"/>
+    </resources>
 </document>
